--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,162 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root" style="width: 100%;"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ESP32 IoT Dashboard</title>
+  <!-- Chart.js for visualizations -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+  <!-- Crypto-JS for encryption -->
+  <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>ESP32 IoT Dashboard</h1>
+      <div class="connection-status">
+        <div id="statusIndicator" class="status-indicator"></div>
+        <span id="statusText">Disconnected</span>
+      </div>
+    </header>
+
+    <div class="dashboard-grid">
+      <!-- Connection Card -->
+      <div class="card connection-card">
+        <div class="card-header">
+          <h2 class="card-title">Connection</h2>
+        </div>
+        <div class="form-group">
+          <label for="wsUrl">WebSocket URL:</label>
+          <input type="text" id="wsUrl" class="form-control" placeholder="ws://192.168.94.240/ws" value="ws://">
+        </div>
+        <div class="btn-group">
+          <button id="connectBtn" class="btn btn-primary" onclick="connectWS()">Connect</button>
+          <button id="disconnectBtn" class="btn btn-danger" onclick="disconnectWS()" disabled>Disconnect</button>
+        </div>
+      </div>
+
+      <!-- Controls Card -->
+      <div class="card controls-card">
+        <div class="card-header">
+          <h2 class="card-title">Device Controls</h2>
+        </div>
+        <div class="tabs">
+          <div class="tab active" data-tab="custom">Custom Command</div>
+          <div class="tab" data-tab="lights">Lights</div>
+          <div class="tab" data-tab="sensors">Sensors</div>
+        </div>
+
+        <div id="customTab" class="tab-content active">
+          <div class="form-group">
+            <label for="message">JSON Command:</label>
+            <input type="text" id="message" class="form-control" value='{"cmd":"ping"}'>
+          </div>
+          <div class="btn-group">
+            <button class="btn btn-success" onclick="sendEncrypted()">Send Encrypted</button>
+            <button class="btn btn-warning" onclick="callStatus()">/status</button>
+            <button class="btn btn-warning" onclick="callDecrypt()">/decrypt</button>
+          </div>
+        </div>
+
+        <div id="lightsTab" class="tab-content">
+          <div class="control-row">
+            <span>LED Control</span>
+            <label class="toggle-switch">
+              <input type="checkbox" id="ledToggle" onchange="toggleLED()">
+              <span class="toggle-slider"></span>
+            </label>
+          </div>
+          <div class="control-row">
+            <span>Brightness: <span id="brightnessValue">50</span>%</span>
+          </div>
+          <div class="slider-container">
+            <input type="range" min="0" max="100" value="50" class="slider" id="brightnessSlider"
+              onchange="setBrightness(this.value)" oninput="updateBrightnessValue(this.value)">
+          </div>
+        </div>
+
+        <div id="sensorsTab" class="tab-content">
+          <div class="btn-group">
+            <button class="btn btn-primary" onclick="requestTemperature()">Request Temperature</button>
+            <button class="btn btn-primary" onclick="requestHumidity()">Request Humidity</button>
+            <button class="btn btn-primary" onclick="requestAllSensors()">Request All Sensors</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card log-card">
+        <div class="card-header">
+          <h2 class="card-title">Message Log</h2>
+          <button class="btn btn-danger" onclick="clearLog()">Clear</button>
+        </div>
+        <div id="log" class="log-container"></div>
+      </div>
+
+      <!-- Metrics Row -->
+      <div class="metrics">
+        <div class="metric-card">
+          <div class="metric-label">Temperature</div>
+          <div id="temperatureValue" class="metric-value">--°C</div>
+        </div>
+        <div class="metric-card">
+          <div class="metric-label">Humidity</div>
+          <div id="humidityValue" class="metric-value">--%</div>
+        </div>
+        <div class="metric-card">
+          <div class="metric-label">Battery</div>
+          <div id="batteryValue" class="metric-value">--%</div>
+        </div>
+      </div>
+
+      <!-- Temperature Chart Card -->
+      <div class="card chart-card">
+        <div class="card-header">
+          <h2 class="card-title">Temperature History</h2>
+        </div>
+        <div class="chart-container">
+          <canvas id="temperatureChart"></canvas>
+        </div>
+      </div>
+
+      <!-- Humidity Chart Card -->
+      <div class="card chart-card">
+        <div class="card-header">
+          <h2 class="card-title">Humidity History</h2>
+        </div>
+        <div class="chart-container">
+          <canvas id="humidityChart"></canvas>
+        </div>
+      </div>
+
+      <!-- System Status Card -->
+      <div class="card chart-card">
+        <div class="card-header">
+          <h2 class="card-title">System Status</h2>
+        </div>
+        <div class="chart-container">
+          <canvas id="statusPieChart"></canvas>
+        </div>
+      </div>
+
+      <!-- Power Usage Card -->
+      <div class="card chart-card">
+        <div class="card-header">
+          <h2 class="card-title">Power Usage</h2>
+        </div>
+        <div class="chart-container">
+          <canvas id="powerChart"></canvas>
+        </div>
+      </div>
+
+      <!-- Log Card -->
+
+    </div>
+  </div>
+
+</body>
+
 </html>
