fix: Update element IDs for status display in HTML and JavaScript

--- a/client/index.html
+++ b/client/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="metric-card">
           <div class="metric-label">Status</div>
-          <div id="aesStatus" class="metric-value">--</div>
+          <div id="status" class="metric-value">--</div>
         </div>
         <div class="metric-card">
           <button class="btn btn-success" onclick="sendCommandViaHttp('led', 'on')">Turn LED On</button>
