fix chart style

--- a/client/index.html
+++ b/client/index.html
@@ -203,7 +203,10 @@
         <h2 class="card-title">Wi-Fi Traffic Activity</h2>
       </div>
       <div class="chart-container">
-        <canvas id="trafficChart"></canvas>
+        <canvas id="trafficChart" style="  display: block;
+        box-sizing: border-box;
+        height: 100%;
+        width: 100%;"></canvas>
       </div>
     </div>
 
